fix(ui): Define title color styling, adjust vertical spacing and enable button wrapping on mobile

--- a/editor-components/call_to_action/call_to_action15/call_to_action15.module.scss
+++ b/editor-components/call_to_action/call_to_action15/call_to_action15.module.scss
@@ -6,6 +6,9 @@
         display: flex;
         flex-direction: column;
         .header{
+            display: flex;
+            flex-direction: column;
+            gap: var(--composer-gap-sm);
             align-items: center; 
             width: 100%;
             .subtitle{
@@ -19,10 +22,11 @@
             .title{
                 text-align: center;
                 width: 100%;
-                span{
-                    &:not([style]){
-                        color: var(--composer-font-color-secondary);
-                    }
+                .title-primary{
+                    color: var( --composer-primary-color);
+                }
+                .title-highlight{
+                    color: var(--composer-font-color-primary);
                 }
             }
             .description{
@@ -33,6 +37,7 @@
     }
     .button-container{
         display: flex;
+        flex-wrap: wrap;
         gap: var(--composer-gap-sm);
         justify-content: center;
         .button{
